test: calculation business and controller #41